[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/sprites/ui/menu_popup_panel.png" type="Texture" id=1]
[ext_resource path="res://resources/shaders/blur.gdshader" type="Shader" id=2]
[ext_resource path="res://source/scenes/menu/info_menu.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/ui/menu_exit_button.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/ui/menu_credits_button.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/LittleThings-ZX5Z.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/sprites/ui/menu_controls_button.png" type="Texture" id=7]
[ext_resource path="res://assets/audio/pik.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/sprites/ui/menu_exit_button_pressed.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/ui/menu_credits_button_pressed.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/ui/menu_controls_button_pressed.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/ui/menu_controls.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/ui/menu_controls_pad_button.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/ui/menu_controls_pad_button_pressed.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/ui/menu_controls_keyboard.png" type="Texture" id=15]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/lod = 3.0
shader_param/apply = true

[sub_resource type="DynamicFont" id=12]
size = 64
outline_size = 9
outline_color = Color( 0.129412, 0.129412, 0.137255, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=13]
size = 40
outline_size = 10
outline_color = Color( 0.129412, 0.129412, 0.137255, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="DynamicFont" id=7]
size = 40
outline_size = 3
outline_color = Color( 0.129412, 0.129412, 0.137255, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 32
outline_size = 3
outline_color = Color( 0.129412, 0.129412, 0.137255, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=9]

[node name="InfoMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="BlurRect" type="ColorRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuPopupPanel" type="Sprite" parent="."]
self_modulate = Color( 0.9, 0.9, 0.9, 1 )
position = Vector2( 640, 360 )
texture = ExtResource( 1 )

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 1048.0
margin_top = 54.0
margin_right = 1169.0
margin_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 60, 50 )
size_flags_horizontal = 3
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 9 )
texture_focused = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 160
custom_constants/margin_top = 100
custom_constants/margin_left = 150
custom_constants/margin_bottom = 73

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 150.0
margin_top = 100.0
margin_right = 1120.0
margin_bottom = 647.0
mouse_filter = 2

[node name="CreditsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
margin_right = 970.0
margin_bottom = 411.0
rect_pivot_offset = Vector2( -569, 16 )
mouse_filter = 2
size_flags_vertical = 3

[node name="CreditsTitle" type="RichTextLabel" parent="MarginContainer/VBoxContainer/CreditsContainer"]
unique_name_in_owner = true
margin_right = 970.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 3
custom_fonts/bold_font = SubResource( 12 )
custom_fonts/normal_font = SubResource( 13 )
bbcode_enabled = true
bbcode_text = "[center][color=#ede19e][b]CREDITS[/b][/color][/center]"
meta_underlined = false
text = "CREDITS"
scroll_active = false

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/CreditsContainer"]
margin_top = 54.0
margin_right = 970.0
margin_bottom = 84.0
custom_constants/separation = 30
custom_styles/separator = SubResource( 14 )

[node name="CreditsLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/CreditsContainer"]
unique_name_in_owner = true
margin_top = 88.0
margin_right = 970.0
margin_bottom = 411.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_font = SubResource( 7 )
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "[center][color=#b45252][b]Programming & Design[/b][/color]
[color=#d3a068]> Patryk Stupka[/color]

[color=#e5ceb4][b]Sound Effects[/b][/color]
[color=#a2dcc7]> Jan Stupka[/color]

[color=#68c2d3][b]Graphics[/b][/color]
[color=#c2d368]> Jan Stupka[/color]

[color=#7b7243][b]Music[/b][/color]
[color=#cf8acb]> Ukulele by Benjamin Tissot ( bensound.com[/color]
[color=#c2d368]> Little Idea by Benjamin Tissot ( bensound.com[/color]
[color=#4b80ca]> Bike Rides by The Green Orbs[/color]

[color=#868188][b]Fonts[/b][/color]
[color=#b2b47e]> Little Things ( fontspace.com[/color][/center]"
meta_underlined = false
text = "Programming & Design
> Patryk Stupka

Sound Effects
> Jan Stupka

Graphics
> Jan Stupka

Music
> Ukulele by Benjamin Tissot ( bensound.com
> Little Idea by Benjamin Tissot ( bensound.com
> Bike Rides by The Green Orbs

Fonts
> Little Things ( fontspace.com"
scroll_active = false

[node name="ControlsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 970.0
margin_bottom = 411.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MenuControlsKeyboard" type="Sprite" parent="MarginContainer/VBoxContainer/ControlsContainer"]
position = Vector2( 505, 207 )
texture = ExtResource( 15 )

[node name="ControlsPadContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 207.0
margin_right = 970.0
margin_bottom = 411.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PadControls" type="Sprite" parent="MarginContainer/VBoxContainer/ControlsPadContainer"]
position = Vector2( 483, 218 )
texture = ExtResource( 12 )

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 415.0
margin_right = 970.0
margin_bottom = 435.0
custom_constants/separation = 20
custom_styles/separator = SubResource( 9 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 439.0
margin_right = 970.0
margin_bottom = 547.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 323.0
margin_right = 647.0
margin_bottom = 108.0

[node name="CreditsButton" type="TextureButton" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 100.0
margin_bottom = 108.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 10 )
texture_focused = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="ControlsInfoButton" type="TextureButton" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 104.0
margin_right = 212.0
margin_bottom = 108.0
rect_min_size = Vector2( 108, 108 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 11 )
texture_focused = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="ControlsPadInfoButton" type="TextureButton" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 216.0
margin_right = 324.0
margin_bottom = 108.0
rect_min_size = Vector2( 108, 108 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_focused = ExtResource( 14 )
expand = true
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
visible = false
margin_left = 150.0
margin_top = 100.0
margin_right = 1120.0
margin_bottom = 647.0

[node name="PikSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Sfx"
